<resources>
    <string name="app_name">Chameleody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_name">File name</string>
    <string name="album_art">Album art</string>
    <string name="album">Album</string>
    <string name="gradient">gradient</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="song_name">Song name</string>
    <string name="artist">Artist</string>
    <string name="smart_shuffle">Smart shuffle</string>
    <string name="art">Art</string>
    <string name="no_lyrics">Tap to add lyrics</string>
    <string name="empty">no value</string>
    <string name="genre">Genre</string>
    <string name="age">Age</string>
    <string name="version">Version</string>
</resources>