<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="fragment.GeneralInfoFragment"
    android:paddingStart="10dp">
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/text"
            android:layout_height="match_parent"
            android:text="@string/song_name"/>
        <TextView
            android:id="@+id/track_name_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/text"
            android:layout_height="match_parent"
            android:text="@string/artist"/>
        <TextView
            android:id="@+id/artist_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/text"
            android:layout_height="match_parent"
            android:text="@string/album"/>
        <TextView
            android:id="@+id/album_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/text"
            android:layout_height="match_parent"
            android:text="@string/genre"/>
        <Spinner
            android:id="@+id/genre_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/genre"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/text"
            android:layout_height="match_parent"
            android:text="@string/age"/>
        <Spinner
            android:id="@+id/age_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/age"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/text"
            android:layout_height="match_parent"
            android:text="@string/version"/>
        <Spinner
            android:id="@+id/version_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/version"/>
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>