<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/options_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_baseline_menu_24"/>
        <Button
            android:id="@+id/search_bar_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/recent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorWhite"
                android:background="@drawable/ic_baseline_access_time_24">
            </Button>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorWhite"
                android:background="@drawable/ic_baseline_favorite_24"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/play_list"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorWhite"
                android:background="@drawable/ic_baseline_playlist_play_24"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/recent"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/favorites"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/playlists"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/shuffle_all_main"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/colorWhite"
            android:background="@drawable/ic_baseline_shuffle_24"/>
        <LinearLayout
            android:id="@+id/adv_shuffle_all_main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:backgroundTint="@color/colorGray"
            android:background="@drawable/rounded_corner">
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@color/colorSpecial"
                android:background="@drawable/ic_baseline_shuffle_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorSpecial"
                android:text="@string/smart_shuffle"
                android:layout_marginRight="8dp"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/sort_options_main"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/colorWhite"
            android:background="@drawable/ic_baseline_sort_24"/>
        <Button
            android:id="@+id/show_by_main"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/colorWhite"
            android:background="@drawable/ic_baseline_view_list_24"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/viewpager">
    </androidx.viewpager.widget.ViewPager>

    <FrameLayout
        android:id="@+id/player_fr_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>